[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcsdl"
version = "0.1.0"
description = "library for doing various things with minecraft server jars"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "MageLock"}
]

[tool.setuptools]
py-modules = ["mcsdl"]
